Fix spacing of grid (no longer extends over edge).

--- a/src/css/Devices.css
+++ b/src/css/Devices.css
@@ -1,7 +1,5 @@
 /* Change num of columns based on screen size */
 .devices {
-  /* column-count: 1; */
-  width: 100%;
   display: grid;
   grid-template-columns: repeat(1, 1fr);
   grid-template-rows: repeat(12, 1fr);
@@ -16,7 +14,7 @@
     grid-template-rows: repeat(6, 1fr);
     column-gap: 40px;
     row-gap: 40px;
-    padding: 15px;
+    padding: 40px;
   }
 }
 
@@ -26,6 +24,6 @@
     grid-template-rows: repeat(4, 1fr);
     column-gap: 40px;
     row-gap: 40px;
-    padding: 15px;
+    padding: 40px;
   }
 }
